<resources>
    <string name="app_name_content">AnyLang</string>
    <string name="new_word_hint_content">New Word</string>
    <string name="translation_hint_content">Translation</string>
    <string name="auto_translate_button">Auto-translate</string>
    <string name="add_record_button">Add record</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="modify_button">Modify</string>
    <string name="show_button">Show translation</string>
    <string name="words_are_over_message">No words to learn for now</string>
    <string name="empty_list_text_message">No words in your list</string>
    <string name="clear_list_button">Clear list</string>
    <string name="delete_duplicates_button">Delete duplicates</string>
    <string name="sync_button">Auto-translate all words</string>
    <string name="transfer_button">Transfer from *.txt file</string>
    <string name="trim_words_button">Trim and lowercase words in the list</string>
    <string name="reset_all_words_progress_content">Reset learning progress</string>
    <string name="no_internet_message">No internet connection.</string>
    <string name="no_internet_dialog_message">Please, check your internet connection. Setting default language.</string>
    <string name="level_content">Level</string>
    <string name="back_auto_translate_content"><![CDATA[<<]]></string>
    <string name="word_level_content">Word Level</string>
    <string name="word_amount_content">Amount Of Words</string>
    <string name="translation_not_found_message">Translation not found</string>
    <string name="first_tab_name_content">Training</string>
    <string name="second_tab_name_content">Word List</string>
    <string name="third_tab_name_content">Statistics</string>
    <string name="add_word_title">Add New Word</string>
    <string name="unable_to_find_translation_message">Unable to find a translation.</string>
    <string name="native_lang_dialog_title">Which language is your native?</string>
    <string name="study_lang_dialog_title">Which language you are to learn?</string>
    <string name="unable_to_create_dialog_message">Unable to create dialog.</string>
    <string name="first_run_key">first_run</string>
    <string name="def_lang">en</string>
    <string name="extra_message_key">extra_message</string>
    <string name="ok_content">OK</string>
    <string name="cancel_content">Cancel</string>
    <string name="modify_word_activity_title">Modify Record</string>
    <string name="name_key">name</string>
    <string name="translation_key">translation</string>
    <string name="modification_date_key">modification_date</string>
    <string name="lvl_key">lvl</string>
    <string name="id_key">id</string>
    <string name="target_date_key">target_date</string>
    <string name="options_content">Options</string>
    <string name="get_words_content">Get Words</string>
    <string name="search_content">Search</string>
    <string name="target_date_time_key">target_date_time</string>
    <string name="modification_date_time_key">modification_date_time</string>
    <string name="select_file_content">Select a File to Upload</string>
    <string name="clear_all_title">You want to clear your word list.</string>
    <string name="are_you_sure_content">Are you sure?</string>
    <string name="yes_content">Yes</string>
    <string name="insert_separator_title">Please, insert separator.</string>
    <string name="wait_content">Please, wait&#8230;</string>
    <string name="reset_progress_content">You want to reset your learning progress.</string>
    <string name="separator_message_content">What symbols do divide the word and its translation in your text file? In case \'word - translation\' separator is \' - \' (not \'-\'). Please, be accurate. *For correct word transferring, there should be one pair \'word - translation\' on the line.</string>
    <string name="done_content">Done</string>
    <string name="change_study_languages_content">Change study language</string>
    <string name="change_native_languages_content">Change native language</string>
    <string name="word_content">Word</string>
    <string name="unable_to_save_from_file_message">Saving from file failed</string>
    <string name="unknown_word_content">Unknown word</string>
    <string name="known_word_content">Known word</string>
    <string name="modify_content">Modify</string>
    <string name="delete_content">Delete</string>
    <string name="total_words_content">Total words</string>
    <string name="add_new_word">Add new word</string>
    <string name="open_settings">Open settings</string>
    <string name="unknown_word">Unknown word</string>
    <string name="known_word">Known word</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="level">Level</string>
    <string name="words_left">Words Left</string>
    <string name="init_extra_message_key">init_extra_message</string>
</resources>
