<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/word_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/new_word_hint_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/translation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/translation_hint_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/translation_hint_content"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/rounded_accent_button"
        android:layout_margin="5dp"
        android:text="@string/delete_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <Button
            android:id="@+id/back_auto_translate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/rounded_accent_button"
            android:layout_margin="5dp"
            android:text="@string/back_auto_translate_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/auto_translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rounded_accent_button"
            android:layout_margin="5dp"
            android:text="@string/auto_translate_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_accent_button"
        android:layout_margin="5dp"
        android:text="@string/update_button" />

</LinearLayout>