<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/clear_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/clear_list_button" />

    <Button
        android:id="@+id/reset_progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/reset_all_words_progress_content" />

    <Button
        android:id="@+id/delete_duplicates_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/delete_duplicates_button" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/sync_button" />

    <Button
        android:id="@+id/transfer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/transfer_button" />

    <Button
        android:id="@+id/trim_words_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_accent_button"
        android:text="@string/trim_words_button" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:indeterminate="true"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:visibility="gone" />

</LinearLayout>