<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.strizhonovapps.anylangapp.view.TrainingFragment">

    <LinearLayout
            android:id="@+id/training_top_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:baselineAligned="false"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

            <LinearLayout
                    android:id="@+id/edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:gravity="center|bottom"
                    android:background="@drawable/training_nav_layout_button"
                    tools:ignore="UseCompoundDrawables,UselessParent"
                    android:focusable="true">

                <ImageView
                        android:id="@+id/modify_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/modify_content"
                        android:src="@drawable/ic_edit" />

                <TextView
                        android:id="@+id/modify_word_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/edit"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center|bottom">

            <LinearLayout
                    android:id="@+id/remove_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center|bottom"
                    android:orientation="vertical"
                    android:background="@drawable/training_nav_layout_button"
                    tools:ignore="UseCompoundDrawables,UselessParent"
                    android:focusable="true">

                <ImageView
                        android:id="@+id/delete_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/modify_content"
                        android:src="@drawable/ic_delete" />

                <TextView
                        android:id="@+id/delete_word_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|bottom"
                        android:paddingTop="5dp"
                        android:text="@string/delete"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center|bottom"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/word_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/montserrat_thin"
                    android:textSize="45sp"
                    android:lineSpacingExtra="0dp"
                    android:textColor="@color/colorPrimaryGray" />

            <TextView
                    android:id="@+id/word_level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorAlternativeText"
                    android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center|bottom"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/words_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/montserrat_thin"
                    android:textSize="45sp"
                    android:gravity="center"
                    android:lineSpacingExtra="0dp"
                    android:textColor="@color/colorPrimaryGray" />

            <TextView
                    android:id="@+id/words_left_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/words_left"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/word_card"
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/word_card_area"
            app:layout_constraintBottom_toTopOf="@id/show_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/training_top_nav">

        <TextView
                android:id="@+id/word_en_text_view"
                android:layout_marginVertical="60dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/word_ru_text_view"
                android:layout_marginVertical="40dp"
                android:fontFamily="@font/montserrat_thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word_en_text_view" />
    </LinearLayout>

    <Button
            android:id="@+id/show_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_accent_button"
            android:text="@string/show_button"
            android:textColor="@color/colorSecondaryText"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/known_button"
            app:layout_constraintEnd_toEndOf="@id/known_button" />

    <LinearLayout
            android:id="@+id/known_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_super_light_layout_button"
            android:clickable="true"
            android:contentDescription="@string/known_word_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/unknown_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true">

        <ImageView
                android:id="@+id/known_word_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:contentDescription="@string/known_word"
                android:src="@drawable/ic_known" />

        <TextView
                android:id="@+id/known_word_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/known_word" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/unknown_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_super_light_layout_button"
            android:clickable="true"
            android:contentDescription="@string/unknown_word_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/known_button"
            android:focusable="true">

        <ImageView
                android:id="@+id/unknown_word_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:contentDescription="@string/unknown_word"
                android:src="@drawable/ic_unknown" />

        <TextView
                android:id="@+id/unknown_word_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/unknown_word" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:id="@+id/when_empty_text_view"
                android:gravity="center"
                android:text="@string/words_are_over_message"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        <Button
                android:id="@+id/get_words_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_accent_button"
                android:layout_marginTop="70dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/get_words_content"
                app:layout_constraintTop_toBottomOf="@id/when_empty_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

